# Beams

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shader_buffers.cpp  shader_buffers.h  shader_drawer.cpp  shader_drawer.h
Solver/: CMakeLists.txt  Solver.cpp  Solver.h  formulae.h
Solver/shaders/: vertex_shader.vert
python-tools/: plot.py  run_nowait.bat
shaders/: vertex_shader.vert
